--- a/style.css
+++ b/style.css
@@ -1,5 +1,3 @@
-
-/* Save this as "style.css" */
 body {
     margin: 0;
     font-family: 'Montserrat', sans-serif;
@@ -48,6 +46,12 @@ footer {
     margin-top: 30px;
     font-size: 0.9rem;
     opacity: 0.8;
+}
+
+.tree {
+    width: 200px;
+    margin-top: 20px;
+    border-radius: 10px;
 }
 
 .snowflake {
